* Added support for toggling the visibility of individual TabSheets. Previously   this feature was unsupported and setting/getting the visible property of a   TabSheet resulted in an exception.
* Added a boundry check on the setCurrentIndex method of TabFolder that guarantees
  the index is >= 0 and < getChildren().size().  Additionally, you may set the
  current index to -1, which indicates no index is selected.
  
* Changed the default value for the currentIndex property of TabFolder.
  Previously the default was always 0, regardless of whether there were any tab
  sheets added to the TabFolder. Now, the default currentIndex is -1 and it is set
  to 0 when you add the first TabSheet. Further, if you remove all tab sheets from
  the TabFolder, then the currentIndex will now revert to -1. An additional
  benefit of this change is that any PropertyChangeListener that is listening to
  the currentIndex property, will now be notified when the first TabSheet is added
  to the TabFolder or when the last TabSheet is removed from the TabFolder.

--- a/src/thinwire/ui/resources/DefaultStyle.properties
+++ b/src/thinwire/ui/resources/DefaultStyle.properties
@@ -1,6 +1,6 @@
 #default style settings
 default.backgroundColor = transparent
-default.fontFamily = sans-serif
+default.fontFamily = Tahoma, sans-serif
 default.fontColor = windowtext
 default.fontSize = 8
 default.fontItalic = false
@@ -15,6 +15,7 @@ default.fxVisibleChange = none
 
 #Button
 thinwire.ui.Button.backgroundColor = buttonface
+thinwire.ui.Button.fontColor = buttontext
 thinwire.ui.Button.borderSize = 2
 thinwire.ui.Button.borderType = outset
 thinwire.ui.Button.borderColor = buttonface
@@ -36,7 +37,7 @@ thinwire.ui.Dialog.borderColor = threedface
 #Divider
 thinwire.ui.Divider.borderSize = 1
 thinwire.ui.Divider.borderType = inset
-thinwire.ui.Divider.borderColor = threedhighlight
+thinwire.ui.Divider.borderColor = threedface
 
 #DropDown
 thinwire.ui.DropDown.backgroundColor = window
@@ -45,12 +46,7 @@ thinwire.ui.DropDown.borderType = inset
 thinwire.ui.DropDown.borderColor = threedface
 
 #Frame
-#XXX: These values are just a good approximation... and it's not possible for a user to set them, so we should
-#     devise a way to stop the setters from being called.  Not critical since these values really don't mean much.
 thinwire.ui.Frame.backgroundColor = window
-thinwire.ui.Frame.borderSize = 4
-thinwire.ui.Frame.borderType = outset
-thinwire.ui.Frame.borderColor = threedface
 
 #GridBox
 thinwire.ui.GridBox.backgroundColor = window
@@ -70,6 +66,7 @@ thinwire.ui.Hyperlink.fontUnderline = true
 
 #Menu
 thinwire.ui.Menu.backgroundColor = threedface
+thinwire.ui.Menu.fontColor = menutext
 thinwire.ui.Menu.borderSize = 2
 thinwire.ui.Menu.borderType = outset
 thinwire.ui.Menu.borderColor = threedface
@@ -126,8 +123,8 @@ thinwire.ui.Tree.borderColor = threedface
 #WebBrowser
 #NOTE: Not sure how many of these settings actually have an effect since we use an IFRAME to render the WebBrowser
 #control.  For instance the background color will mean nothing.
-thinwire.ui.TextField.backgroundColor = window
-thinwire.ui.TextField.borderSize = 2
-thinwire.ui.TextField.borderType = inset
-thinwire.ui.TextField.borderColor = threedface
+thinwire.ui.WebBrowser.backgroundColor = window
+thinwire.ui.WebBrowser.borderSize = 2
+thinwire.ui.WebBrowser.borderType = inset
+thinwire.ui.WebBrowser.borderColor = threedface
 
