* Reworked the way that TabSheet's x, y, width and height properties work.  Previously,   you could not get/set the x, y, width or height properties of a TabSheet.  Now,   the values always equal that of the containing TabFolder.  If the TabSheet   is not attached to a TabFolder, the value of all the properties is zero and   if you attempt to set any of them and exception is thrown.  Overall, this should   make the properties more useful.

--- a/src/thinwire/ui/resources/DefaultStyle.properties
+++ b/src/thinwire/ui/resources/DefaultStyle.properties
@@ -101,6 +101,9 @@ thinwire.ui.TabFolder.borderColor = threedface
 #TabSheet
 #NOTE: Border is defined by TabFolder, not TabSheet
 thinwire.ui.TabSheet.backgroundColor = threedface
+thinwire.ui.TabSheet.borderSize = 2
+thinwire.ui.TabSheet.borderType = outset
+thinwire.ui.TabSheet.borderColor = threedface
 
 #TextArea
 thinwire.ui.TextArea.backgroundColor = window
