--- a/src/thinwire/ui/resources/DefaultStyle.properties
+++ b/src/thinwire/ui/resources/DefaultStyle.properties
@@ -1,3 +1,33 @@
+#color override
+systemColor.activeborder = rgb(212, 208, 200)
+systemColor.activecaption = rgb(0, 84, 227)
+systemColor.appworkspace = rgb(128, 128, 128)
+systemColor.background = rgb(0, 78, 152)
+systemColor.buttonface = rgb(236, 233, 216)
+systemColor.buttonhighlight = rgb(255, 255, 255)
+systemColor.buttonshadow = rgb(172, 168, 153)
+systemColor.buttontext = rgb(0, 0, 0)
+systemColor.captiontext = rgb(255, 255, 255)
+systemColor.graytext = rgb(172, 168, 153)
+systemColor.highlight = rgb(49, 106, 197)
+systemColor.highlighttext = rgb(255, 255, 255)
+systemColor.inactiveborder = rgb(212, 208, 200)
+systemColor.inactivecaption = rgb(122, 150, 223)
+systemColor.inactivecaptiontext = rgb(216, 228, 248)
+systemColor.infobackground = rgb(255, 255, 225)
+systemColor.infotext = rgb(0, 0, 0)
+systemColor.menu = rgb(255, 255, 255)
+systemColor.menutext = rgb(0, 0, 0)
+systemColor.scrollbar = rgb(212, 208, 200)
+systemColor.threeddarkshadow = rgb(113, 111, 100)
+systemColor.threedface = rgb(236, 233, 216)
+systemColor.threedhighlight = rgb(255, 255, 255)
+systemColor.threedlightshadow = rgb(241, 239, 226)
+systemColor.threedshadow = rgb(172, 168, 153)
+systemColor.window = rgb(255, 255, 255)
+systemColor.windowframe = rgb(0, 0, 0)
+systemColor.windowtext = rgb(0, 0, 0)
+
 #default style settings
 default.backgroundColor = transparent
 default.fontFamily = Tahoma, sans-serif
