--- a/src/thinwire/ui/resources/DefaultStyle.properties
+++ b/src/thinwire/ui/resources/DefaultStyle.properties
@@ -64,6 +64,12 @@ thinwire.ui.Dialog.borderSize = 2
 thinwire.ui.Dialog.borderType = outset
 thinwire.ui.Dialog.borderColor = threedface
 
+#DateBox
+thinwire.ui.DateBox.backgroundColor = window
+thinwire.ui.DateBox.borderSize = 2
+thinwire.ui.DateBox.borderType = inset
+thinwire.ui.DateBox.borderColor = threedface
+
 #Divider
 thinwire.ui.Divider.borderSize = 1
 thinwire.ui.Divider.borderType = inset
