[11/03/06] * Cleaned up some bugs tied to feature request "[1581474] Drag and Drop".

--- a/src/thinwire/ui/resources/DefaultStyle.properties
+++ b/src/thinwire/ui/resources/DefaultStyle.properties
@@ -115,6 +115,7 @@ thinwire.ui.ProgressBar.backgroundColor = window
 thinwire.ui.ProgressBar.borderSize = 2
 thinwire.ui.ProgressBar.borderType = inset
 thinwire.ui.ProgressBar.borderColor = threedface
+thinwire.ui.ProgressBar.fontColor = highlight
 
 #RadioButton
 thinwire.ui.RadioButton.backgroundColor = window
