[12/06/06]  * Update version number to 1.2_RC1 for Release Candidate 1.

--- a/src/thinwire/ui/resources/versionInfo.properties
+++ b/src/thinwire/ui/resources/versionInfo.properties
@@ -7,7 +7,7 @@ versionInfo.companyZip=75081
 versionInfo.companyPhone=(972) 644-6279
 versionInfo.companyWebsite=http://www.customcreditsystems.com
 versionInfo.productDescription=ThinWire
-versionInfo.productVersion=1.2_r205
+versionInfo.productVersion=1.2_RC1
 versionInfo.productWebsite=http://www.thinwire.com
 versionInfo.internalName=ThinWire
 versionInfo.legalCopyright=Copyright (c) 2006, Patent Pending
