--- a/src/thinwire/ui/resources/versionInfo.properties
+++ b/src/thinwire/ui/resources/versionInfo.properties
@@ -10,6 +10,6 @@ versionInfo.productDescription=ThinWire
 versionInfo.productVersion=1.2_RC2_r586
 versionInfo.productWebsite=http://www.thinwire.com
 versionInfo.internalName=ThinWire
-versionInfo.legalCopyright=Copyright (c) 2008, Patent Pending
+versionInfo.legalCopyright=Copyright (c) 2003-2008, Patent Pending
 versionInfo.originalFilename=thinwire.jar
 
