--- a/src/thinwire/config/web.xml
+++ b/src/thinwire/config/web.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
+<entry key="thinwire.ui.Panel" >thinwire.render.web.ContainerRenderer</entry>
 <entry key="thinwire.ui.Button" >thinwire.render.web.ButtonRenderer</entry>
 <entry key="thinwire.ui.CheckBox" >thinwire.render.web.CheckBoxRenderer</entry>
 <entry key="thinwire.ui.Component" >thinwire.render.web.ComponentRenderer</entry>
