Added maven repo deployment info
 - Now deploys to a maven repo hosted at http://maven.tedchoward.com

--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,25 @@
         </configuration>
       </plugin>
     </plugins>
+    <extensions>
+      <extension>
+        <groupId>org.springframework.build.aws</groupId>
+        <artifactId>org.springframework.build.aws.maven</artifactId>
+        <version>3.0.0.RELEASE</version>
+      </extension>
+    </extensions>
   </build>
 
+  <distributionManagement>
+    <repository>
+      <id>maven-s3-release-repo</id>
+      <name>S3 Release Repository</name>
+      <url>s3://maven.tedchoward.com/release</url>
+    </repository>
+    <snapshotRepository>
+      <id>maven-s3-snapshot-repo</id>
+      <name>S3 Snapshot Repository</name>
+      <url>s3://maven.tedchoward.com/snapshot</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
