--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
-.classpath
+### Eclipse ###
+.pydevproject
 .project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
 .settings/
+.loadpath
+
+### Maven ###
+target /
